# SystematicStrategyResearch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: v1.yaml
cpp/: CMakeLists.txt  indicators.cpp
data/outputs/: summary.json  wf_best.json
data/raw/: btcusdt_1h_sample.csv
reports/sample_demo/: demo_manifest.json
scripts/: build_features.py  demo.sh  dev.sh  generate_sample_ohlcv.py  ingest_sample_ohlcv.py  make_report.py  run_backtest_smoke.py  run_step6_abc.py  run_step6_real_db.py  run_step7_demo_report.py  run_step7_report.py  run_walkforward_smoke.py  validate_features.py
sql/: 001_init.sql  002_features.sql  003_ingest_sample.sql
src/: main.py
src/backtest/: costs.py  engine.py  fill_model.py  grid.py  metrics.py  splits.py  types.py
src/config/: loader.py  settings.py
src/db/: engine.py
src/fast_indicators/: __init__.py
src/features/: core.py
src/main.egg-info/: SOURCES.txt  top_level.txt
src/reports/: equity_report.py  generate.py
src/strategies/v1/: entry.py  exits.py  spec.py  trend_filter.py
tests/: test_backtest_engine.py  test_cost_metrics.py  test_exits_v1.py  test_fast_indicators.py  test_features_core.py  test_fill_model.py  test_indicators_unit.py  test_no_lookahead_truncation.py  test_no_lookhead_engine.py  test_splits.py  test_step6_walkforward_abc.py  test_strategy_v1_entry.py  test_strategy_v1_trend.py  test_walkforward_grid.py
