[project]
name = "systematicstrategyresearch"
version = "0.1.0"
description = "Systematic strategy research platform (Python + SQL + C++)."
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "numpy>=1.26",
  "pandas>=2.0",
  "python-dotenv>=1.0",
]

[tool.ruff]
# Keep lines short to avoid E501 and make diffs readable.
line-length = 100

# Match your installed Python.
# Ruff uses this to decide which modern syntax rules are valid.
target-version = "py312"

# Ignore some files/folders that are not source code.
extend-exclude = [
  ".venv",
  "data/outputs",
]

[tool.ruff.lint]
# Rulesets:
# - E/F: pycodestyle/pyflakes (errors)
# - I: import sorting
# - B: bugbear
# - UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]

# Per-file ignores (preferred in newer Ruff versions).
[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
markers = [
  "integration: tests that require the docker database",
]

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "cpp"
